--- a/vignettes/TidyEval.Rmd
+++ b/vignettes/TidyEval.Rmd
@@ -138,3 +138,44 @@ Each time we say the word **then**, we use the pipe operator. We include the pip
 
 ### `.data`
 One thing you'll notice is that we do not make reference to the `driftData` object in either `dr_factor()` or `dr_correctOne()` when they are included in a pipe. Compare that to the code block in the Tidy Evaluation in `driftR` section above, which includes explicit reference to `driftData` in the `dr_function()`. Using the pipe operator simplifies our code in part by reducing the amount of characters needed in the function. Specifically, the pipe operator allows us to drop our references to particular data frames. This is facilitated by the pronoun [`.data`](http://rlang.tidyverse.org/reference/tidyeval-data.html). Each of the `driftR` functions incorporates `.data`, allowing the data frame object's name to be easily passed from one function to the next in a pipe.
+
+## A Full Session with `%>%`
+
+Bellow is an example of what a full correction of a dataset should look like if you are piping `driftR` functions together:
+
+```{r, eval=FALSE}
+# load needed packages
+library(driftR)
+library(dplyr)
+library(readr)
+
+# import data exported from a Sonde 
+# example file located in the package
+waterTibble <- dr_readSonde(file = system.file("extdata", "rawData.csv", package="driftR"), 
+                            define = TRUE)
+
+# calculate correction factors and correct variables
+waterTibble <- waterTibble %>%
+  dr_factor(corrFactor = corrFac, dateVar = Date, 
+            timeVar = Time, format = "MDY") %>%
+  dr_correctOne(sourceVar = SpCond, cleanVar = SpCond_Corr, 
+                calVal = 1.07, calStd = 1, factorVar = corrFac) %>%
+  rename(Turbidity = `Turbidity.`) %>%
+  dr_correctOne(sourceVar = Turbidity, cleanVar = Turbidity_Corr, 
+               calVal = 1.3, calStd = 0, factorVar = corrFac) %>% 
+  dr_correctOne(sourceVar = DO, cleanVar = DO_Corr, calVal = 97.6, 
+                calStd = 99, factorVar = corrFac) %>%
+  dr_correctTwo(sourceVar = pH, cleanVar = pH_Corr, 
+                calValLow = 7.01, calStdLow = 7, calValHigh = 11.8, 
+                calStdHigh =  10, factorVar = corrFac) %>%
+  dr_correctTwo(sourceVar = Chloride, cleanVar = Chloride_Corr, 
+                calValLow = 11.6, calStdLow = 10, calValHigh = 1411, 
+                calStdHigh =  1000, factorVar = corrFac) %>%
+  dr_drop(head=6, tail=6) %>%
+  select(Date, Time, SpCond, SpCond_Corr, pH, pH_Corr, pHmV, 
+         Chloride, Chloride_Corr, AmmoniumN, NitrateN, 
+         Turbidity, Turbidity_Corr, DO, DO_Corr, corrFac)
+
+# export cleaned data
+write_csv(waterTibble, path = "waterData.csv", na = "NA")
+```
